docker command changes